--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
     
-    <script src="script/app.js"></script>
+    <script src="script/tasks.js"></script>
     <script src="script/practice.js"></script>
 </body>
 </html>
