--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     
     <script src="script/tasks.js"></script>
     <script src="script/practice.js"></script>
+    <script src="script/tasks2.js"></script>
 </body>
 </html>
