--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/style.css">
-    <title>Document</title>
+    <title>Login form</title>
 </head>
 <body> 
     
+    <form>
+        Email:
+        <input type="text" id="email" value="Submit">
+        <input type="submit" value="Submit">
+        Name:
+        <input type="text" 
+ 
+    </form>
+    
+    Enter a date: 
+    <input type="datetime-local" name="" id="">
+
+
     <script src="script/tasks.js"></script>
     <script src="script/practice.js"></script>
     <script src="script/tasks2.js"></script>
 </body>
+<script>
+    function login(){
+
+    }
+</script>
 </html>
