--- a/index.html
+++ b/index.html
@@ -8,19 +8,9 @@
     <title>Login form</title>
 </head>
 <body> 
-    <form>
-        Name:
-        <input type="text" id="name">
-        <input type="submit" value="Submit">
-          
-        Number:
-        <input type="number".value id="number">
-        <input type="submit" value="Submit">
-          
-    </form>
-
     <script src="script/tasks.js"></script>
     <script src="script/practice.js"></script>
     <script src="script/tasks2.js"></script>
+    <script src="script/task4.js"></script>
 </body>
 </html>
