--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Login form</title>
 </head>
 <body> 
-    
+    <form>
+        <input type="text">
+    </form>
+
+
+
     <script src="script/tasks.js"></script>
     <script src="script/practice.js"></script>
     <script src="script/tasks2.js"></script>
