simple layout for calculator.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,42 @@
     <title>Login form</title>
 </head>
 <body> 
-    <form>
-        <input type="text">
-    </form>
 
+<table>
+    <tr>
+        <th>
+            empty
+        </th>
+    </tr>
+<tr>
+    <td border="2">AC</td>
+    <td border="2">%</td>
+    <td border="2">÷</td>
+</tr>
+<tr>
+    <td border="2">7</td>
+    <td border="2">8</td>
+    <td border="2">9</td>
+    <td border="2">x</td>
+</tr>
+<tr>
+    <td border="2">4</td>
+    <td border="2">5</td>
+    <td border="2">6</td>
+    <td border="2">-</td>
+</tr>
+<tr>
+    <td border="2">1</td>
+    <td border="2">2</td>
+    <td border="2">3</td>
+    <td border="2">+</td>
+</tr>
+<tr>
+    <td border="2">0</td>
+    <td border="2">.</td>
+    <td border="2">=</td>
+</tr>
+</table>
 
 
     <script src="script/tasks.js"></script>
