--- a/index.html
+++ b/index.html
@@ -6,42 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/style.css">
     <title>Login form</title>
+    <style>
+        button {
+            width: 100%;
+        }
+    </style>
 </head>
 <body> 
 
-<table>
+<table border="1">
     <tr>
-        <th>
-            empty
+        <th colspan="4">
+            Answer
         </th>
     </tr>
 <tr>
-    <td>AC</td>
-    <td>%</td>
-    <td>÷</td>
+    <td colspan="2"><button> AC</button></td>
+    <td><button> %</button></td>
+    <td><button> ÷</button></td>
 </tr>
 <tr>
-    <td>7</td>
-    <td>8</td>
-    <td>9</td>
-    <td>x</td>
+    <td><button> 7</button></td>
+    <td><button> 8</button></td>
+    <td><button> 9</button></td>
+    <td><button> x</button></td>
 </tr>
 <tr>
-    <td>4</td>
-    <td>5</td>
-    <td>6</td>
-    <td>-</td>
+    <td><button> 4</button></td>
+    <td><button> 5</button></td>
+    <td><button> 6</button></td>
+    <td><button> -</button></td>
 </tr>
 <tr>
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-    <td>+</td>
+    <td><button> 1</button></td>
+    <td><button> 2</button></td>
+    <td><button> 3</button></td>
+    <td><button> +</button></td>
 </tr>
 <tr>
-    <td>0</td>
-    <td>.</td>
-    <td>=</td>
+    <td colspan="2"><button> 0</button></td>
+    <td><button> .</button></td>
+    <td><button> =</button></td>
 </tr>
 </table>
 
