--- a/index.html
+++ b/index.html
@@ -5,51 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/style.css">
-    <title>Login form</title>
-    <style>
-        button {
-            width: 100%;
-        }
-    </style>
+    <title>Js tasks</title>
+
 </head>
 <body> 
-
-<table border="1">
-    <tr>
-        <th colspan="4">
-            Answer
-        </th>
-    </tr>
-<tr>
-    <td colspan="2"><button>AC</button></td>
-    <td><button>%</button></td>
-    <td><button>÷</button></td>
-</tr>
-<tr>
-    <td><button>7</button></td>
-    <td><button>8</button></td>
-    <td><button>9</button></td>
-    <td><button>x</button></td>
-</tr>
-<tr>
-    <td><button>4</button></td>
-    <td><button>5</button></td>
-    <td><button>6</button></td>
-    <td><button>-</button></td>
-</tr>
-<tr>
-    <td><button>1</button></td>
-    <td><button>2</button></td>
-    <td><button>3</button></td>
-    <td><button>+</button></td>
-</tr>
-<tr>
-    <td colspan="2"><button>0</button></td>
-    <td><button>.</button></td>
-    <td><button>=</button></td>
-</tr>
-</table>
-
 
     <script src="script/tasks.js"></script>
     <script src="script/practice.js"></script>
